Fix readability

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -41,6 +41,7 @@ p {
     margin: 0em 0em 25px;
     .brandSection & {
         font-family: $scriptFont;
+        font-weight: 400;
     }
     @media(min-width:767px) {
         font-size: 20px;
@@ -62,7 +63,7 @@ a {
     }
     p {
         font-family: $scriptFont;
-        font-size:150%;
+        font-size:180%;
     }
 
 }
